--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,16 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-
-
+    <script src="keys.js"></script>
     <link rel="stylesheet" href="leaflet/leaflet.css" />
     <script src="leaflet/leaflet.js"></script>
    <script>
+       //ニフクラとの連携
+       let ncmb = new NCMB(appKey, clientKey);
+       let UTdata = ncmb.DataStore("Maps");
+       let latitude = "latitude"; //緯度
+       let longitude = "longitude"; //経度
+
         function dist(sx,sy,ex,ey) {
             return Math.sqrt((ex-sx)*(ex-sx)+(ey-sy)*(ey-sy));
         }
