--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,8 @@
     <div id="map"> </div>
     <br>
     <button id="btnA">現在地の表示</button>
+    <div id="now">現在地の緯度と経度</div>
+    <br>
     <div id="message">message area</div>
 </body>
 </html>
