ニフクラともう一つのデータを連携

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
        //ニフクラとの連携
        var ncmb = new NCMB(appKey, clientKey);
        var TestClass = ncmb.DataStore("MapsTest");
+       let UTdata = ncmb.DataStore("UpdateTest");
        //let latitude = "latitude"; //緯度
        //let longitude = "longitude"; //経度
 
