一時的に保管する情報を記入する欄と、それを表示するボタンを追加

--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,10 @@
     <canvas id="mycanvas" width="180" height="90">Test</canvas>
     <canvas id="canvas" width="150" height="150">Test</canvas>
     <div id="map"> </div>
+    <div>
+        <input type="text" id="data0" placeholder="保存したい情報">
+        <button id="button" onclick="enterData()">Enter</button>
+    </div>
     <br>
     <button id="btnA">現在地の表示</button>
     <div id="now">現在地の緯度と経度</div>
