表示ボタンの追加・送信ボタンの位置の変更

--- a/www/index.html
+++ b/www/index.html
@@ -122,8 +122,9 @@
     <div id="map"> </div>
     <div>
         <input type="text" id="data0" placeholder="保存したい情報">
-        <button id="button" onclick="enterData()">送信</button>
     </div>
+    <button id="button" onclick="enterData()">送信</button>
+    <button id="button" onclick="fetchAll2()">表示</button>
     <br>
     <button id="btnA">現在地の表示</button>
     <div id="now">現在地の緯度と経度</div>
