--- a/www/index.html
+++ b/www/index.html
@@ -143,6 +143,7 @@
     </div>
     <button id="button" onclick="enterData()">送信</button>
     <button id="button" onclick="fetchAll2()">表示</button>
+    <button id="button" onclick="deleteData()">削除</button>
     <br>
     <button id="btnA">現在地の表示</button>
     <div id="now">現在地の緯度と経度</div>
