ボタンの色をそれぞれの機能に合わせて変更

--- a/www/index.html
+++ b/www/index.html
@@ -157,9 +157,9 @@
     <div>
         <input type="text" id="data0" placeholder="保存したい情報">
     </div>
-    <button id="button" onclick="enterData()">送信</button>
-    <button id="button" onclick="fetchAll2()">表示</button>
-    <button id="button" onclick="deleteData()">削除</button>
+    <button id="button1" onclick="enterData()">送信</button>
+    <button id="button1" onclick="fetchAll2()">表示</button>
+    <button id="button1" onclick="deleteData()">削除</button>
     <br>
     <button id="btnA">現在地の表示</button>
     <div id="now">現在地の緯度と経度</div>
